--- a/Sesion4/1-text-classification-with-hf.ipynb
+++ b/Sesion4/1-text-classification-with-hf.ipynb
@@ -1215,7 +1215,8 @@
     "    save_strategy='epoch',\n",
     "    load_best_model_at_end=True,\n",
     "    disable_tqdm=False,\n",
-    "    logging_steps=logging_steps\n",
+    "    logging_steps=logging_steps,\n",
+    "    report_to='tensorboard'\n",
     ")\n",
     "\n",
     "# Y definimos el entrenador, especificando el modelo, datasets y el tokenizador\n",
