--- a/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
+++ b/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
@@ -191,6 +191,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# ---------------------------------------------------------\n",
+        "# LIBRERÍAS DEL PROYECTO (Standard & Third Party)\n",
+        "# ---------------------------------------------------------\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import spacy\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.utils import shuffle\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
+        "from textblob import TextBlob\n",
+        "import nltk\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "\n",
+        "# Cargamos el modelo una sola vez para todo el notebook\n",
+        "nlp = spacy.load('es_core_news_lg')"
+      ],
+      "metadata": {
+        "id": "czTn-n4jAzSZ"
+      },
+      "id": "czTn-n4jAzSZ",
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 2. Contexto de Negocio: Análisis de Reputación de Contratistas\n",
@@ -206,13 +235,14 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import spacy\n",
         "from sklearn.utils import shuffle\n",
         "\n",
         "nlp = spacy.load('es_core_news_lg')\n",
-        "\n",
+        "\"\"\"\n",
         "# Plantillas de comentarios positivos (25 variantes)\n",
         "pos_templates = [\n",
         "    \"Excelente cumplimiento en los plazos de entrega.\", \"Equipo altamente profesional y capacitado.\",\n",
@@ -517,11 +547,12 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "\n",
+        "\"\"\"\n",
         "# Dividimos los datos\n",
         "X_train, X_test, y_train, y_test = train_test_split(df['clean_review'], df['label'], test_size=0.25, random_state=42)\n",
         "\n",
@@ -641,7 +672,9 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "from textblob import TextBlob\n",
+        "\"\"\"\n",
         "\n",
         "def get_textblob_sentiment(text):\n",
         "    # TextBlob analiza la polaridad de -1 (muy negativo) a 1 (muy positivo)\n",
@@ -687,7 +720,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Comparativa de Hallazgos Corporativos\n",
+        "## 7. Comparativa de Hallazgos Corporativos\n",
         "Aquí comparamos ambos modelos"
       ],
       "metadata": {
@@ -699,7 +732,9 @@
       "cell_type": "code",
       "source": [
         "# --- COMPARATIVA DE HALLAZGOS (TRIPLE TÉCNICA) ---\n",
+        "\"\"\"\n",
         "from sklearn.metrics import accuracy_score\n",
+        "\"\"\"\n",
         "\n",
         "# Creamos un DataFrame con los resultados de las tres técnicas sobre el set de prueba\n",
         "# Nota: Asegúrate de que las variables y_test, y_pred_tfidf, y_pred_vec y df_textblob coincidan en índices.\n",
@@ -943,15 +978,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> **Análisis Comparativo de Resultados:**\n",
-        ">\n",
-        "> 1. **Robustez de la IA vs. Rigidez del Léxico:** Se observa que los modelos basados en entrenamiento (**TF-IDF y Word Embeddings**) alcanzaron una precisión cercana al 100%. Esto se debe a que el modelo aprendió la semántica específica del dominio de contratación (SECOP II) a partir del dataset de 2,000 registros.\n",
-        ">\n",
-        "> 2. **Limitaciones de TextBlob/Léxico:** El modelo de **Análisis Léxico (TextBlob)** presenta una precisión menor. Esto ocurre porque esta técnica depende de un diccionario predefinido que no siempre interpreta correctamente términos técnicos corporativos. Por ejemplo, frases como *\"Incumplimiento grave de los niveles de servicio\"* podrían ser marcadas como neutras o positivas si el diccionario no tiene cargada la polaridad negativa de \"Incumplimiento\" en un contexto administrativo.\n",
-        ">\n",
-        "> 3. **Vectores Semánticos (spaCy LG):** A pesar de que TF-IDF es muy eficiente, el modelo de **Vectores (LG)** es el más escalable para el proyecto real. Al capturar el significado en un espacio de 300 dimensiones, este modelo podrá identificar sentimientos en propuestas futuras que usen sinónimos que no estaban en el entrenamiento inicial (ej. \"demoras\" vs \"retrasos\"), gracias a la proximidad vectorial.\n",
-        ">\n",
-        "> **Conclusión Final:** Para el pipeline del Agente de IA propuesto, se recomienda el uso del modelo basado en **Vectores Semánticos de spaCy**, ya que ofrece la mayor capacidad de generalización ante la ambigüedad del lenguaje en las licitaciones públicas colombianas."
+        " #### **Análisis Crítico del Desempeño (Métricas de IA)**\n",
+        "Se observa un **Accuracy del 100%** tanto en el modelo de ML Clásico (TF-IDF) como en el modelo de Innovación (Vectores LG). Es fundamental aclarar que este resultado excepcional se debe a la naturaleza del dataset utilizado en esta etapa:\n",
+        "\n",
+        " 1.  **Dataset de Referencia (Gold Standard):** El conjunto de 2,000 registros fue generado programáticamente a partir de un conjunto de plantillas semánticamente puras. Al no existir solapamiento léxico (palabras negativas que aparezcan en contextos positivos y viceversa), los modelos logran una separación perfecta de las clases.\n",
+        " 2.  **Validación de Pipeline:** Este resultado no debe interpretarse como un desempeño final en entornos reales con \"ruido\" lingüístico, sino como una **validación exitosa de la arquitectura del pipeline**. Confirma que los modelos son capaces de aprender y clasificar correctamente los patrones de reputación corporativa definidos para el ecosistema de SECOP II.\n",
+        " 3.  **Contraste con el Análisis Léxico:** La superioridad del 100% frente al ~53% de TextBlob subraya que, incluso con datos claros, un modelo entrenado (IA) es drásticamente más eficaz que un diccionario estático para entender el dominio de la contratación pública.\n",
+        "\n",
+        "\n",
+        "**Análisis Comparativo de Resultados:**\n",
+        "\n",
+        "1. **Robustez de la IA vs. Rigidez del Léxico:** Se observa que los modelos basados en entrenamiento (**TF-IDF y Word Embeddings**) alcanzaron una precisión cercana al 100%. Esto se debe a que el modelo aprendió la semántica específica del dominio de contratación (SECOP II) a partir del dataset de 2,000 registros.\n",
+        "\n",
+        "2. **Limitaciones de TextBlob/Léxico:** El modelo de **Análisis Léxico (TextBlob)** presenta una precisión menor. Esto ocurre porque esta técnica depende de un diccionario predefinido que no siempre interpreta correctamente términos técnicos corporativos. Por ejemplo, frases como *\"Incumplimiento grave de los niveles de servicio\"* podrían ser marcadas como neutras o positivas si el diccionario no tiene cargada la polaridad negativa de \"Incumplimiento\" en un contexto administrativo.\n",
+        "\n",
+        "3. **Vectores Semánticos (spaCy LG):** A pesar de que TF-IDF es muy eficiente, el modelo de **Vectores (LG)** es el más escalable para el proyecto real. Al capturar el significado en un espacio de 300 dimensiones, este modelo podrá identificar sentimientos en propuestas futuras que usen sinónimos que no estaban en el entrenamiento inicial (ej. \"demoras\" vs \"retrasos\"), gracias a la proximidad vectorial.\n",
+        "\n",
+        "**Conclusión Final:** Para el pipeline del Agente de IA propuesto, se recomienda el uso del modelo basado en **Vectores Semánticos de spaCy**, ya que ofrece la mayor capacidad de generalización ante la ambigüedad del lenguaje en las licitaciones públicas colombianas, ya que: El análisis de discrepancias revela la fragilidad de los modelos basados en léxico (TextBlob). Casos críticos como **'fracaso rotundo'** o **'peor servicio'** fueron clasificados erróneamente como positivos por la técnica léxica, mientras que la IA (Vectores y TF-IDF) los identificó correctamente. Esto subraya que para el monitoreo de SECOP II, depender de diccionarios estáticos es un riesgo de negocio que solo se mitiga con modelos entrenados o representaciones vectoriales densas.\""
       ],
       "metadata": {
         "id": "P1C8U5_W-zDM"
@@ -961,7 +1004,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 7. REPLICACIÓN: Ejercicio Original (Movie Reviews - VADER)\n",
+        "## 8. REPLICACIÓN: Ejercicio Original (Movie Reviews - VADER)\n",
         "Cumplimos con la reproducción del estudio académico del profesor, cargando el archivo `.tsv` original."
       ],
       "metadata": {
@@ -972,8 +1015,10 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "import nltk\n",
         "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "\"\"\"\n",
         "\n",
         "nltk.download('vader_lexicon', quiet=True)\n",
         "sid = SentimentIntensityAnalyzer()\n",
@@ -1022,7 +1067,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 8. Conclusiones Corporativas\n",
+        "## 9. Conclusiones Corporativas\n",
         "\n",
         "1.  **Diferencia de Metodologías:** El modelo VADER (Paso 7) es **basado en léxico** (diccionarios), lo cual es rápido pero limitado. El modelo de **Vectores Semánticos** (Paso 5) entiende el contexto y el significado, siendo más robusto para capturar matices en el lenguaje corporativo.\n",
         "2.  **Valor para el Proyecto SECOP II:** Este pipeline permite calificar la reputación de empresas licitantes de forma automatizada. Al filtrar los sentimientos negativos en las reseñas de ejecución de contratos previos, nuestra IA puede sugerir si un contratista es de alto o bajo riesgo.\n",
