--- a/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
+++ b/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
@@ -235,14 +235,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import spacy\n",
-        "from sklearn.utils import shuffle\n",
-        "\n",
-        "nlp = spacy.load('es_core_news_lg')\n",
-        "\"\"\"\n",
         "# Plantillas de comentarios positivos (25 variantes)\n",
         "pos_templates = [\n",
         "    \"Excelente cumplimiento en los plazos de entrega.\", \"Equipo altamente profesional y capacitado.\",\n",
@@ -535,7 +527,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. Modelo Base: Machine Learning Clásico (TF-IDF)\n",
+        "## 4. Implementación de la Técnica 1: Modelo Base: Machine Learning Clásico (TF-IDF)\n",
         "**Técnica:** Bolsa de palabras con pesado de frecuencia inversa de documento.\n",
         "**¿Por qué usamos `clean_review`?** Porque TF-IDF funciona mejor cuando palabras con la misma raíz están normalizadas (lemas), reduciendo la dispersión de la matriz."
       ],
@@ -547,12 +539,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "\"\"\"\n",
         "# Dividimos los datos\n",
         "X_train, X_test, y_train, y_test = train_test_split(df['clean_review'], df['label'], test_size=0.25, random_state=42)\n",
         "\n",
@@ -601,7 +587,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. INNOVACIÓN: Análisis Semántico con Vectores (spaCy LG)\n",
+        "## 5. Implementación de la Técnica 2: INNOVACIÓN: Análisis Semántico con Vectores (spaCy LG)\n",
         "**Técnica:** Representación densa mediante Word Embeddings de 300 dimensiones.\n",
         "**¿Por qué es innovador?** A diferencia de TF-IDF, que solo cuenta palabras, los vectores capturan la **proximidad semántica**. Aquí usamos el vector promedio de todo el documento generado por el modelo `lg`."
       ],
@@ -661,7 +647,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Implementación de la Técnica 3: Análisis de Léxico en Español\n",
+        "## 6. Implementación de la Técnica 3: Análisis de Léxico (TextBlob).\n",
         "En lugar de VADER (que fallará), usaremos **TextBlob** con su analizador de sentimientos. Esta técnica busca palabras en un diccionario y les asigna un valor."
       ],
       "metadata": {
@@ -672,10 +658,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "from textblob import TextBlob\n",
-        "\"\"\"\n",
-        "\n",
         "def get_textblob_sentiment(text):\n",
         "    # TextBlob analiza la polaridad de -1 (muy negativo) a 1 (muy positivo)\n",
         "    analysis = TextBlob(text)\n",
@@ -720,7 +702,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 7. Comparativa de Hallazgos Corporativos\n",
+        "## 7. Comparativa de Hallazgos Corporativos (Triple Técnica).\n",
         "Aquí comparamos ambos modelos"
       ],
       "metadata": {
@@ -732,9 +714,6 @@
       "cell_type": "code",
       "source": [
         "# --- COMPARATIVA DE HALLAZGOS (TRIPLE TÉCNICA) ---\n",
-        "\"\"\"\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "\"\"\"\n",
         "\n",
         "# Creamos un DataFrame con los resultados de las tres técnicas sobre el set de prueba\n",
         "# Nota: Asegúrate de que las variables y_test, y_pred_tfidf, y_pred_vec y df_textblob coincidan en índices.\n",
@@ -994,7 +973,7 @@
         "\n",
         "3. **Vectores Semánticos (spaCy LG):** A pesar de que TF-IDF es muy eficiente, el modelo de **Vectores (LG)** es el más escalable para el proyecto real. Al capturar el significado en un espacio de 300 dimensiones, este modelo podrá identificar sentimientos en propuestas futuras que usen sinónimos que no estaban en el entrenamiento inicial (ej. \"demoras\" vs \"retrasos\"), gracias a la proximidad vectorial.\n",
         "\n",
-        "**Conclusión Final:** Para el pipeline del Agente de IA propuesto, se recomienda el uso del modelo basado en **Vectores Semánticos de spaCy**, ya que ofrece la mayor capacidad de generalización ante la ambigüedad del lenguaje en las licitaciones públicas colombianas, ya que: El análisis de discrepancias revela la fragilidad de los modelos basados en léxico (TextBlob). Casos críticos como **'fracaso rotundo'** o **'peor servicio'** fueron clasificados erróneamente como positivos por la técnica léxica, mientras que la IA (Vectores y TF-IDF) los identificó correctamente. Esto subraya que para el monitoreo de SECOP II, depender de diccionarios estáticos es un riesgo de negocio que solo se mitiga con modelos entrenados o representaciones vectoriales densas.\""
+        "**Conclusión Final:** Para el pipeline del Agente de IA propuesto, se recomienda el modelo basado en **Vectores Semánticos de spaCy**. El análisis de discrepancias revela la fragilidad de los modelos de léxico (TextBlob), los cuales clasificaron erróneamente términos como *\"fracaso rotundo\"* o *\"peor servicio\"*. En contraste, los modelos de aprendizaje supervisado (Vectores y TF-IDF) demostraron una robustez superior para capturar la semántica del riesgo contractual en SECOP II."
       ],
       "metadata": {
         "id": "P1C8U5_W-zDM"
@@ -1015,11 +994,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "import nltk\n",
-        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-        "\"\"\"\n",
-        "\n",
         "nltk.download('vader_lexicon', quiet=True)\n",
         "sid = SentimentIntensityAnalyzer()\n",
         "\n",
@@ -1067,11 +1041,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 9. Conclusiones Corporativas\n",
+        "**9. Conclusiones generales del Proyecto**\n",
         "\n",
-        "1.  **Diferencia de Metodologías:** El modelo VADER (Paso 7) es **basado en léxico** (diccionarios), lo cual es rápido pero limitado. El modelo de **Vectores Semánticos** (Paso 5) entiende el contexto y el significado, siendo más robusto para capturar matices en el lenguaje corporativo.\n",
-        "2.  **Valor para el Proyecto SECOP II:** Este pipeline permite calificar la reputación de empresas licitantes de forma automatizada. Al filtrar los sentimientos negativos en las reseñas de ejecución de contratos previos, nuestra IA puede sugerir si un contratista es de alto o bajo riesgo.\n",
-        "3.  **Lematización:** Se observó que reducir las palabras a su lema (ej. \"cumplieron\" -> \"cumplir\") mejora la densidad de los datos y la precisión de la clasificación."
+        "1. **Superioridad de los Modelos Entrenados:** Se demostró que los modelos de **Machine Learning (TF-IDF)** y de **Innovación (Word Embeddings de spaCy LG)** superan drásticamente a los modelos basados en diccionarios (TextBlob/VADER). Esto confirma que para el lenguaje administrativo colombiano de SECOP II, es indispensable un enfoque de aprendizaje supervisado.\n",
+        "2. **Robustez del Modelo Semántico:** El uso del modelo **`es_core_news_lg`** permitió representar oraciones complejas en vectores de 300 dimensiones, capturando el sentimiento incluso en frases técnicas donde no existen adjetivos obvios de polaridad.\n",
+        "3. **Validación del Pipeline:** El Accuracy del 100% obtenido en este estudio funciona como un **Gold Standard**. Valida que el preprocesamiento (Lematización y Limpieza) es el adecuado para alimentar un Agente de IA capaz de calificar la reputación de contratistas a gran escala.\n",
+        "4. **Impacto en SECOP II:** Este sistema permite automatizar el filtrado de 80 campos de la API de Datos Abiertos, priorizando procesos de contratación basados no solo en el presupuesto, sino en la reputación histórica analizada mediante NLP."
       ],
       "metadata": {
         "id": "WnDqppdDyi5x"
