--- a/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
+++ b/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
@@ -235,7 +235,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Plantillas de comentarios positivos (25 variantes)\n",
+        "# Plantillas de comentarios positivos (12+1 variantes)\n",
         "pos_templates = [\n",
         "    \"Excelente cumplimiento en los plazos de entrega.\", \"Equipo altamente profesional y capacitado.\",\n",
         "    \"La implementación fue un éxito total.\", \"Superaron las expectativas del pliego técnico.\",\n",
@@ -252,7 +252,7 @@
         "    \"Cumplimiento del 100% de los requisitos.\"\n",
         "]\n",
         "\n",
-        "# Plantillas de comentarios negativos (25 variantes)\n",
+        "# Plantillas de comentarios negativos (12+1 variantes)\n",
         "neg_templates = [\n",
         "    \"Retrasos constantes en la entrega de hitos.\", \"Personal poco capacitado y con errores técnicos.\",\n",
         "    \"La implementación fue un fracaso rotundo.\", \"No cumplieron con los requisitos del pliego.\",\n",
