--- a/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
+++ b/Sesion1/FabianSF/7_sentiment_analysis_Foxtrot.ipynb
@@ -30,6 +30,29 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### **Introducción y Contexto del Proyecto**\n",
+        "\n",
+        "Este notebook constituye la segunda fase del mini-proyecto de procesamiento de lenguaje natural aplicado al ecosistema de contratación pública colombiana (**SECOP II**). Mientras que la fase anterior se centró en la extracción estructural de requisitos, el presente estudio aborda el **Análisis de Sentimientos y Calificación de Reputación Corporativa**.\n",
+        "\n",
+        "**Objetivo General:**\n",
+        "Evaluar y comparar tres metodologías de clasificación de sentimientos (Estadística, Semántica y Léxica) sobre un corpus de retroalimentación de contratistas del Estado. El fin último es integrar este pipeline en un **Agente de IA** que permita filtrar propuestas no solo por cumplimiento técnico, sino por antecedentes de desempeño y reputación histórica.\n",
+        "\n",
+        "**Metodología y Alcance:**\n",
+        "1.  **Dataset SECOP-Sentiment:** Debido a la naturaleza sensible de los datos reales, se ha construido un *Gold Standard* de **2,000 registros balanceados** mediante técnicas de generación programática, cubriendo 26 patrones semánticos de éxito y fricción contractual.\n",
+        "2.  **Enfoque Multitécnica:** Se implementan y contrastan tres niveles de IA:\n",
+        "    *   **ML Clásico:** Vectorización TF-IDF con Regresión Logística.\n",
+        "    *   **Innovación Semántica:** Uso de *Word Embeddings* de alta dimensionalidad mediante el modelo **`es_core_news_lg`** de spaCy.\n",
+        "    *   **Análisis Léxico:** Evaluación de diccionarios predefinidos (**TextBlob** para español y **VADER** para la replicación en inglés).\n",
+        "3.  **Transferencia de Conocimiento:** Se incluye una sección de replicación del ejercicio académico original (Movie Reviews) para validar la consistencia del pipeline frente a datasets estándar de la industria.\n"
+      ],
+      "metadata": {
+        "id": "F8l8JwjtJonm"
+      },
+      "id": "F8l8JwjtJonm"
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "iT260kZMVzE1"
       },
