--- a/Sesion1/FabianSF/6_practice_Foxtrot.ipynb
+++ b/Sesion1/FabianSF/6_practice_Foxtrot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOhfhZitfJ7ophn/U6lJ1ul",
+      "authorship_tag": "ABX9TyPNRclmvfK1Bjf6klZaFPiO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,27 @@
       ],
       "metadata": {
         "id": "2tdp0Q05VIBm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Introducción y Contexto del Proyecto**\n",
+        "\n",
+        "Este notebook constituye la primera fase del mini-proyecto de procesamiento de lenguaje natural aplicado al ecosistema de contratación pública colombiana (**SECOP II**). El objetivo fundamental es aplicar técnicas clásicas de NLP para transformar pliegos de condiciones no estructurados en datos procesables para la toma de decisiones.\n",
+        "\n",
+        "**Alcance Técnico:**\n",
+        "1. **Procesamiento Base:** Implementación de pipelines de spaCy para tokenización y segmentación de oraciones en documentos legales.\n",
+        "2. **Análisis Morfológico:** Comparación técnica entre *Stemming* y *Lematización* aplicada al lenguaje jurídico-administrativo.\n",
+        "3. **Extracción de Información:** Uso de Reconocimiento de Entidades Nombradas (NER) y *PhraseMatching* para identificar automáticamente presupuestos, entidades contratantes y requisitos de experiencia.\n",
+        "4. **Visualización Avanzada:** Uso de grafos de dependencia sintáctica para entender la estructura de las obligaciones contractuales.\n",
+        "\n",
+        "Este análisis sienta las bases para el desarrollo de un **Agente de IA** capaz de auditar propuestas y generar borradores técnicos de manera automatizada.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "L81Tw6ZNMlHs"
       }
     },
     {
@@ -196,6 +217,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# ---------------------------------------------------------\n",
+        "# LIBRERÍAS DEL PROYECTO (Standard & Third Party)\n",
+        "# ---------------------------------------------------------\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import spacy\n",
+        "from spacy import displacy\n",
+        "from spacy.matcher import Matcher, PhraseMatcher\n",
+        "import matplotlib.pyplot as plt\n",
+        "from collections import Counter\n",
+        "import nltk\n",
+        "from nltk.stem.snowball import SnowballStemmer\n",
+        "\n",
+        "# Cargamos el modelo una sola vez para todo el notebook\n",
+        "# Nota: Se usa el modelo LARGE por su soporte de Word Vectors (Embeddings)\n",
+        "nlp = spacy.load('es_core_news_lg')"
+      ],
+      "metadata": {
+        "id": "IVkfnpKkL7Am"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 2. Carga de Datos y Pipeline (Conceptos Notebook 1)"
@@ -207,13 +254,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import spacy\n",
-        "from spacy import displacy\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Cargamos el modelo LARGE\n",
-        "nlp = spacy.load('es_core_news_lg')\n",
-        "\n",
         "texto_secop = \"\"\"\n",
         "FICHA TÉCNICA DEL PROCESO DE CONTRATACIÓN - SECOP II\n",
         "ID DEL PROCESO: CO1.REQ.2024.001\n",
@@ -256,7 +296,7 @@
         "id": "plUW0Gk8W2r0",
         "outputId": "af042e56-2e57-4969-c72b-099100df4743"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +335,7 @@
         "id": "5rHuc4iHY0Ao",
         "outputId": "499b1333-641a-4b93-c680-d4a086b18698"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +390,7 @@
         "id": "K2IATh4vaMBu",
         "outputId": "d1f18d17-04ee-405f-f12c-dfd6bc7bc98a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +613,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from nltk.stem.snowball import SnowballStemmer\n",
         "stemmer = SnowballStemmer('spanish')\n",
         "\n",
         "palabras = [\"contratación\", \"contratista\", \"contratado\", \"contratando\"]\n",
@@ -589,7 +628,7 @@
         "id": "bMQPeQqNbqgR",
         "outputId": "8231a451-85dc-4a19-8ea2-e5ad23d4955f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,8 +799,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from spacy.matcher import Matcher, PhraseMatcher\n",
-        "\n",
         "# Matcher por patrones\n",
         "matcher = Matcher(nlp.vocab)\n",
         "matcher.add(\"REQ_TECNICO\", [[{\"LOWER\": \"experiencia\"}, {\"LOWER\": \"mínima\"}]])\n",
@@ -781,7 +818,7 @@
         "id": "5kajFH3Vb039",
         "outputId": "10bc7e4b-1f2e-46e6-f755-e6259eee1f2d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -825,7 +862,7 @@
         "id": "1xf0yoWacDUj",
         "outputId": "ce27b04b-89d1-48eb-cfda-ef6d3c27661f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,9 +1139,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from collections import Counter\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "pos_counts = Counter([t.pos_ for t in doc if not t.is_stop and not t.is_punct])\n",
         "\n",
         "plt.figure(figsize=(10,4))\n",
@@ -1121,7 +1155,7 @@
         "id": "Y0FglGR_cYOE",
         "outputId": "a9646657-1708-49ab-8403-ddadae2b048d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1162,6 +1196,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Hallazgos Técnicos de la Fase 1:**\n",
+        "*   **NER en Dominio Legal:** El modelo `es_core_news_lg` demostró una alta precisión para identificar organizaciones (MINTIC) y localizaciones (Bogotá), aunque clasifica términos financieros complejos como `MISC`, sugiriendo el uso de patrones personalizados en fases posteriores.\n",
+        "*   **Lematización vs Stemming:** Se validó que la lematización es indispensable en SECOP II. Mientras el Stemming trunca palabras como \"contratación\" a \"contrat\", la lematización conserva el concepto jurídico íntegro, permitiendo búsquedas semánticas precisas.\n",
+        "*   **Estructura Sintáctica:** La visualización de dependencias permitió identificar que las obligaciones contractuales suelen estructurarse mediante verbos perifrásticos (\"deberá acreditar\"), lo cual es clave para programar el Agente de IA que extraerá los requisitos mínimos."
+      ],
+      "metadata": {
+        "id": "_uHatp_rNG3H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 10. Reproducción ejercicio del notebook 6"
       ],
       "metadata": {
@@ -1171,14 +1217,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import spacy\n",
-        "from spacy.matcher import Matcher\n",
-        "import pandas as pd\n",
-        "from spacy import displacy\n",
-        "\n",
-        "# Cargamos el modelo Large (Innovación de Maestría)\n",
-        "nlp = spacy.load('es_core_news_lg')\n",
-        "\n",
         "# --- PASO 1: Carga del documento ---\n",
         "# Creamos un archivo de texto para simular la carga desde disco como en el original\n",
         "contenido_secop = \"\"\"\n",
@@ -1265,7 +1303,7 @@
         "id": "IEoFKLT3gYXy",
         "outputId": "0ad6c32f-dd02-47ed-a8e9-ee8be356e0d8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,7 +1390,7 @@
         "id": "CTX-DFS5gsFh",
         "outputId": "e021e2a9-2d0d-461a-a80b-f13d1e9e803a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1378,7 +1416,7 @@
         "id": "VRdTz_Jdg5kx",
         "outputId": "b83f7d75-07d8-41e9-b1f8-92d834d0cbb6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
